vuejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuejs-service
  labels:
    app: vuejs
spec:
  selector:
    app: vuejs
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
